@@ -98,13 +98,13 @@ public class JVM implements Caching {
                     Test t = (Test)provider.newInstance(Test.class);
                     try {
                         provider.writeField(t, "o", "object", Test.class);
-                        provider.writeField(t, "c", new Character('c'), Test.class);
-                        provider.writeField(t, "b", new Byte((byte)1), Test.class);
+                        provider.writeField(t, "c", Character.valueOf('c'), Test.class);
+                        provider.writeField(t, "b", Byte.valueOf((byte)1), Test.class);
                         provider.writeField(t, "s", new Short((short)1), Test.class);
-                        provider.writeField(t, "i", new Integer(1), Test.class);
-                        provider.writeField(t, "l", new Long(1), Test.class);
-                        provider.writeField(t, "f", new Float(1), Test.class);
-                        provider.writeField(t, "d", new Double(1), Test.class);
+                        provider.writeField(t, "i", Integer.valueOf(1), Test.class);
+                        provider.writeField(t, "l", Long.valueOf(1), Test.class);
+                        provider.writeField(t, "f", Float.valueOf(1), Test.class);
+                        provider.writeField(t, "d", Double.valueOf(1), Test.class);
                         provider.writeField(t, "bool", Boolean.TRUE, Test.class);
                         test = true;
                     } catch(IncompatibleClassChangeError e) {
